--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -27,10 +28,9 @@
 
 <body>
     <div class="container-fluid">
-        <div class="jumbotron" style="background-color: blue; color: white">
+        <div class="jumbotron">
             <h1 class="text-center">Michael J. Klein Inc.</h1>
             <h3 class="text-center">Experienced and Reliable General Contractor</h3>
-            <h1><img src="assets\images\general\header.jpg" alt="builder image"></h1>
         </div>
         <div class="container-fluid">
             <nav class="navbar navbar-expand-sm navbar-light bg-light">
@@ -64,10 +64,10 @@
                             <h5 class="card-title">Services</h5>
                             <p class="card-text"><img class="thumbnail" src="assets\images\general\header.jpg"
                                     alt="Builder Photo">
-                                blah blah blah projects
-                                <br /><br />blah blah more services 
-                                <br /><br />blah blah even more services 
-                                <br /><br />blah blah blah 
+                                Over 35 years of professional experience, we offer skilled craftsmenship on all projects. 
+                                <br /><br />We build from the ground up to create your dream home! 
+                                <br /><br />Custom homes are our specialty! 
+                                <br /><br />Need to update your existing home? We also take care of renovations!
                             </p>
                         </div>
                     </div>
@@ -77,7 +77,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <div class="suefooter">
+                    <div class="mjkfooter">
                         <br /><br />Copyright &copy;
                     </div>
                 </div>
